# Agender

./: .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
backend/: __init__.py  __main__.py  backup.py  catalog.py  cloud_account.py  cloud_backup.py  cloud_identity.py  cloud_sync.py  config.py  desktop_dialogs.py  hydromet_export.py  index_worker.py  indexer.py  lazy_asgi.py  main.py  onedrive_folders.py  portable_profile.py  request_attachments.py  requirements.txt  security.py  server.py  sync_lock.py  user_data.py  wqreport_export.py
backend/data/: stations.xlsx
backend/readers/: __init__.py  base.py  quality.py  raw.py
backend/viewer/: README.md  api.py  (+5 more)
frontend/: index.html
packaging/: agender-backend.spec  backend_entry.py  requirements-build.txt
release-notes/: v1.13.1.md
scripts/: build-backend.ps1  build-desktop.ps1  build-release.ps1  license-generator.py  setup-dev.ps1  verify-release.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/autogenerated/: get_update_download_status.toml
src-tauri/resources/backend/: .gitkeep
src-tauri/src/: main.rs
tests/: test_cloud_sync.py  test_diary_board.py  test_frontend_architecture.py  test_hydromet_export.py  test_indexer.py  test_inventory_worker.py  test_lazy_asgi.py  test_main_security.py  test_onedrive_folders.py  test_request_attachments.py  test_requests_board.py  test_security.py  test_server.py  test_viewer_export.py  test_wqreport_export.py
(+51 files in other folders)
